# CS179M-Project

./: .gitignore  CMakeLists.txt  Makefile  a.out  main.cpp  main1.cpp  main_console.cpp  notes.md  project-repo.pro  project-repo.pro.user.2ad7bf0  project-repo.pro.user.d1a8f10  project-repo.pro.user.da6bbdb
Manifests/: ShipCase6.txt
Outbound/: ShipCase2OUTBOUND.txt
forms/: MainWindow.ui
headers/: Balance.h  HeuristicStrategy.h  Logger.h  MainWindow.h  Popup.h  Ship.h  ShipState.h  ShippingPortDriver.h
logfiles/: logfile_2023.txt
src/: Balance.cpp  HeuristicStrategy.cpp  Logger.cpp  MainWindow.cpp  Popup.cpp  Ship.cpp  Ship.cpp.autosave  ShipState.cpp  ShippingPortDriver.cpp  gui.cpp  main.cpp  menu.cpp
